# goodminton-rag-service

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/core/: config.py  db.py  prompts.py
app/messaging/: product_consumer.py
app/models/: schemas.py
app/routers/: chat.py
app/services/: embedding.py  indexer.py  llm.py  product_client.py  retrieval.py  tools.py
data/static_docs/: 01-chinh-sach-bao-hanh.md  02-chinh-sach-doi-tra.md  03-thong-tin-shop.md  04-huong-dan-can-day-vot.md
scripts/: backfill_products.py  index_static_docs.py
